--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip
           
           add-apt-repository -y ppa:mozillateam/ppa
           
