--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -114,7 +114,7 @@ jobs:
           export DISPLAY=:99
           export HOME=/home/appuser
           # 替换成你的目标网址
-          nohup firefox --no-remote --new-instance "https://nowsecure.nl" > /home/appuser/firefox.log 2>&1 &
+          nohup firefox --no-remote --new-instance "https://decrypt.day/app/id1489932710" > /home/appuser/firefox.log 2>&1 &
           EOF
           
           chmod +x /home/appuser/run_firefox.sh
